--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G3 Architects</title>
-    <link rel="shortcut icon" href="./asset/images/icons/projects.png" type="image/x-icon">
     <!-- font link -->
-    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@200;400;500;600;700;800;900&display=swap"
-        rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -41,7 +38,7 @@
                 <button class="btn">Explore More</button>
             </div>
             <div class="banner">
-                <img src="./asset/images/banner.png" alt="Architects">
+                <img src="./images/banner.png" alt="Architects">
             </div>
         </div>
 
@@ -52,16 +49,16 @@
         <section class="features container">
             <div class="team">
                 <div class="team-number">
-                    <img src="./asset/images/team1.png" alt="photo">
+                    <img src="./images/team1.png" alt="photo">
                 </div>
                 <div class="team-number">
-                    <img src="./asset/images/team2.png" alt="photo">
+                    <img src="./images/team2.png" alt="photo">
                 </div>
                 <div class="team-number">
-                    <img src="./asset/images/team3.png" alt="photo">
+                    <img src="./images/team3.png" alt="photo">
                 </div>
                 <div class="team-number">
-                    <img src="./asset/images/team4.png" alt="photo">
+                    <img src="./images/team4.png" alt="photo">
                 </div>
             </div>
 
@@ -120,7 +117,7 @@
 
             <div class="experience-media">
                 <div>
-                    <img src="./asset/images/architect.png" alt="">
+                    <img src="./images/architect.png" alt="">
                 </div>
                 <div>
                     <button>
@@ -142,7 +139,7 @@
             <div class="facts-analysis">
                 <div class="facts">
                     <div class="facts-info">
-                        <img src="./asset/images/icons/ribon.png" alt="Awards">
+                        <img src="./images/icons/ribon.png" alt="Awards">
                         <h2>54</h2>
                         <p>Awards Winning</p>
                     </div>
@@ -150,7 +147,7 @@
 
                 <div class="facts">
                     <div class="facts-info">
-                        <img src="./asset/images/icons/projects.png" alt="Project">
+                        <img src="./images/icons/projects.png" alt="Project">
                         <h2>1458+</h2>
                         <p>Projects Finished</p>
                     </div>
@@ -158,7 +155,7 @@
 
                 <div class="facts">
                     <div class="facts-info">
-                        <img src="./asset/images/icons/customers.png" alt="Clients">
+                        <img src="./images/icons/customers.png" alt="Clients">
                         <h2>590+</h2>
                         <p>Clients Worked</p>
                     </div>
@@ -166,7 +163,7 @@
 
                 <div class="facts">
                     <div class="facts-info">
-                        <img src="./asset/images/icons/email.png" alt="Email">
+                        <img src="./images/icons/email.png" alt="Email">
                         <h2>22578</h2>
                         <p>Email Send</p>
                     </div>
@@ -185,23 +182,23 @@
 
                 <div class="sponspor-company">
                     <div>
-                        <img src="./asset/images/sponsors/spotify.png" alt="company">
+                        <img src="./images/sponsors/spotify.png" alt="company">
                     </div>
 
                     <div>
-                        <img src="./asset/images/sponsors/amazon.png" alt="company">
+                        <img src="./images/sponsors/amazon.png" alt="company">
                     </div>
 
                     <div>
-                        <img src="./asset/images/sponsors/google.png" alt="company">
+                        <img src="./images/sponsors/google.png" alt="company">
                     </div>
 
                     <div>
-                        <img src="./asset/images/sponsors/telerama.png" alt="company">
+                        <img src="./images/sponsors/telerama.png" alt="company">
                     </div>
 
                     <div>
-                        <img src="./asset/images/sponsors/figma.png" alt="company">
+                        <img src="./images/sponsors/figma.png" alt="company">
                     </div>
                 </div>
             </div>
