--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>G3 Architects</title>
     <!-- font link -->
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -229,11 +232,6 @@
                         <div class="input-group">
                             <label for="name">Work Email</label>
                             <input type="email" name="email" id="email" required>
-                        </div>
-
-                        <div class="input-group">
-                            <label for="message">Your Message</label>
-                            <textarea id="message" rows="8"></textarea>
                         </div>
                         <button type="submit">Submit</button>
                     </form>
