--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G3 Architects</title>
+
     <!-- font link -->
+
     <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,7 +16,9 @@
 </head>
 
 <body>
+
     <!----------- header area ----------->
+
     <header>
         <div class="nav-area">
             <div class="logo">
@@ -48,7 +52,10 @@
     </header>
 
     <main>
+
         <!---------- features section ---------->
+
+
         <section class="features container">
             <div class="team">
                 <div class="team-number">
@@ -75,6 +82,9 @@
         </section>
 
         <!---------- experience section ---------->
+
+
+
         <section class="experience-info container">
             <div class="experience-blog">
                 <div class="experiences">
@@ -132,6 +142,8 @@
         </section>
 
         <!--------- facts section --------->
+
+
         <section class="all-facts container">
             <div class="facts-title">
                 <h1 class="title">Some Facts</h1>
@@ -175,6 +187,8 @@
         </section>
 
         <!----------- sponspors section ----------->
+
+
         <section class="container">
             <div class="sponspors">
                 <div class="sponspor-info">
@@ -208,6 +222,8 @@
         </section>
 
         <!--------- Contact Section ---------->
+
+
         <section class="contact-form">
             <div class="container">
                 <div class="contact-info">
@@ -240,7 +256,7 @@
         </section>
     </main>
 
-
+    <!------ footer area  ------>
 
     <footer class="container">
         <div class="footer">
